--- a/index.html
+++ b/index.html
@@ -5,14 +5,15 @@
 table {
   font-family: arial, sans-serif;
   border-collapse: collapse;
-  width: 100%;
+  width: 60%;
+  margin: 0 auto;
 }
 
 td, th {
   border: 1px solid #dddddd;
   text-align: left;
   padding: 8px;
-  font-size: 14px;
+  font-size: 20px;
 }
 
 tr:nth-child(even) {
