--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ table {
   font-family: arial, sans-serif;
   border-collapse: collapse;
   width: 60%;
-  margin: 0 auto;
+  margin: 10px auto;
 }
 
 td, th {
